--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://govindrajewar.github.io/Financial_Dashboard",
+  "homepage": "https://SwapneelKarahale.github.io/Financial_Dashboard",
   "name": "financial-dashboard",
   "version": "0.1.0",
   "private": true,
